refs #1764 : bugfix - Horizontal scrollbar on tinyMCE editor textarea

--- a/plugins/ED_tinyMCE/override.css
+++ b/plugins/ED_tinyMCE/override.css
@@ -43,7 +43,7 @@
 }
 
 .mce-edit-area {
-	padding:20px!important;
+	padding:8px!important;
 	box-shadow:0 0 5px rgba(0,0,0,0.3);
 	border:1px #eee solid!important;
 }
